[tool.poetry]
name = "ctf-writeups"
version = "0.1.0"
description = "CTF writeups and braindumps"
authors = ["Fabio Zuber"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
mkdocs-material = "^9.4.7"
pillow = "^10.1.0"
cairosvg = "^2.7.1"
mkdocs = "^1.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
